# sphinx-ford

./: .gitignore  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  pypi.yml
docs/: conf.py  fetch_examples.py  index.rst
docs/examples/: aotus.rst  dbcsr.rst  fpm.rst  index.rst  stdlib.rst  toml-f.rst
docs/how-to/: cross-reference.rst  document-module.rst  ford-project.rst  installation.rst  intersphinx.rst  parameter-constants.rst
docs/reference/: configuration.rst  directives.rst  roles.rst
docs/tutorials/: ford-bridge.rst  getting-started.rst
src/sphinx_ford/: __init__.py  _ford_compat.py  _md2rst.py  domain.py  ford_bridge.py  ford_parser.py
tests/: conftest.py  test_domain.py  test_ford_bridge.py  test_ford_parser.py  test_integration.py  test_md2rst.py  test_nesting.py
tests/roots/test-ford-bridge/: conf.py  index.rst
tests/roots/test-html/: index.rst
tests/roots/test-module/: index.rst
tests/roots/test-nesting/: index.rst
tests/roots/test-xref/: conf.py  index.rst
